typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__where___test__where Post (no rel).snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/where_.rs
expression: "tree::print(context.generate(&Where::new(post, false))?)"
---
root: struct 'PostWhere_norel' #25
├─ [id]: optional #23
│  └─ item: integer #14
└─ [title]: optional #24
   └─ item: string #15

