typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__where___test__where User (no rel).snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/where_.rs
expression: "tree::print(context.generate(&Where::new(user, false))?)"
---
root: struct 'UserWhere_norel' #20
├─ [id]: optional #18
│  └─ item: integer #9
└─ [name]: optional #19
   └─ item: string #10

