typegraph/core/src/runtimes/prisma/type_generation/snapshots/typegraph_core__runtimes__prisma__type_generation__where___test__where User (with rel).snap
---
source: typegraph/core/src/runtimes/prisma/type_generation/where_.rs
expression: "tree::print(context.generate(&Where::new(user, true))?)"
---
root: struct 'UserWhere' #27
├─ [id]: optional #21
│  └─ item: integer #9
├─ [name]: optional #22
│  └─ item: string #10
└─ [posts]: optional '_26_PostWhere_norel?' #26
   └─ item: struct 'PostWhere_norel' #25
      ├─ [id]: optional #23
      │  └─ item: integer #14
      └─ [title]: optional #24
         └─ item: string #15

